--- a/index.html
+++ b/index.html
@@ -7,7 +7,41 @@
   <title>My Static Site</title>
 </head>
 <body>
-  <h1>Hello, World!</h1>
+  <header>
+    <img src="assets/logo.png" alt="Logo" class="logo" />
+    <nav>
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
+  <section id="home">
+    <h1>Welcome to My Static Site</h1>
+    <p>This is a simple static website hosted on Cloudflare Pages.</p>
+    <img src="assets/example.png" alt="Example Image" class="example-image" />
+    <button onclick="showAlert()">Click Me</button>
+  </section>
+
+  <section id="about">
+    <h2>About</h2>
+    <p>This static site is built using HTML, CSS, and JS — optimized for fast delivery using Cloudflare CDN.</p>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <form id="contact-form">
+      <input type="text" id="name" placeholder="Your Name" required />
+      <input type="email" id="email" placeholder="Your Email" required />
+      <textarea id="message" placeholder="Your Message" required></textarea>
+      <button type="submit">Send</button>
+    </form>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 My Static Site. All Rights Reserved.</p>
+  </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
